--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "boonda-desktop"
+name = "desktop"
 version = "0.0.0"
 description = "A Tauri App"
 authors = ["you"]
@@ -8,17 +8,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1", features = [] }
+tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = ["clipboard-all", "shell-open", "system-tray", "window-close", "window-hide"] }
-tauri-plugin-positioner = { version = "1.0", features = ["system-tray"] }
+tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
+tauri-plugin-shell = "2.0.0-beta"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tauri-plugin-positioner = { version = "2.0.0-beta" }
 actix-web = "4"
 tokio = { version = "1", features = ["full"] }
 actix-cors = "0.7.0"
-
-[features]
-# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
-custom-protocol = ["tauri/custom-protocol"]
+tauri-plugin-clipboard-manager = "2.1.0-beta.1"
