--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -15,7 +15,7 @@ tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
 tauri-plugin-shell = "2.0.0-beta"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tauri-plugin-positioner = { version = "2.0.0-beta" }
+tauri-plugin-positioner = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2", features = ["tray-icon"] }
 actix-web = "4"
 tokio = { version = "1", features = ["full"] }
 actix-cors = "0.7.0"
