--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,4 +1,9 @@
 {
     "$schema": "https://openapi.vercel.sh/vercel.json",
-    "crons": []
+    "crons": [
+        {
+            "path": "/api/upload/cleanup",
+            "schedule": "0 * * * *"
+        }
+    ]
 }
