--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -26,10 +26,10 @@
     "react-hook-form": "^7.51.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.0"
+    "zod": "^3.23.0",
+    "@tauri-apps/cli": "2.0.0-beta.13"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "2.0.0-beta.13",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.2.1",
