--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -64,4 +64,5 @@ jobs:
           releaseBody: 'See the assets to download this version and install.'
           releaseDraft: true
           prerelease: false
+          projectPath: ./apps/desktop
           args: ${{ matrix.settings.args }}
