--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -16,7 +16,8 @@
     "@supabase/supabase-js": "^2.42.5",
     "@tanstack/react-query": "^5.29.2",
     "@tauri-apps/api": ">=2.0.0-beta.0",
-    "@tauri-apps/plugin-clipboard-manager": ">=2.0.0-beta.0",
+    "@tauri-apps/cli": "2.0.0-beta.13",
+    "@tauri-apps/plugin-clipboard-manager": "2.0.0-beta.2",
     "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -26,8 +27,7 @@
     "react-hook-form": "^7.51.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.0",
-    "@tauri-apps/cli": "2.0.0-beta.13"
+    "zod": "^3.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
