--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "desktop"
+name = "boonda-desktop"
 version = "0.0.0"
 description = "A Tauri App"
 authors = ["you"]
@@ -8,15 +8,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta", features = [] }
+tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
-tauri-plugin-shell = "2.0.0-beta"
+tauri = { version = "1", features = ["clipboard-all", "shell-open", "system-tray", "window-close", "window-hide"] }
+tauri-plugin-positioner = { version = "1.0", features = ["system-tray"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tauri-plugin-positioner = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2", features = ["tray-icon"] }
 actix-web = "4"
 tokio = { version = "1", features = ["full"] }
 actix-cors = "0.7.0"
-tauri-plugin-clipboard-manager = "2.0.0-beta.2"
+
+[features]
+# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
+custom-protocol = ["tauri/custom-protocol"]
